# Document-Similarity-Matching

./: Invoice.py  Readme.md  db_config.py  main.py  pyproject.toml  repository.py  train_test.py
